--- a/src/assets/css/font.css
+++ b/src/assets/css/font.css
@@ -18,6 +18,22 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* SF Pro Display */
+@font-face {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('SF Pro Display Regular'), local('SF-Pro-Display-Regular'), url('../fonts/SF-Pro-Display-Regular.woff2') format('woff2');
+}
+@font-face {
+    font-family: 'SF Pro Display';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: local('SF Pro Display Bold'), local('SF-Pro-Display-Bold'), url('../fonts/SF-Pro-Display-Bold.woff2') format('woff2');
+}
+
 /* Icons */
 
 @font-face {
